--- a/src/assets/styles/scss/components/cart/_paymentPage.scss
+++ b/src/assets/styles/scss/components/cart/_paymentPage.scss
@@ -335,6 +335,11 @@
           margin-top: 20px;
         }
 
+        .error {
+          color: red;
+          text-align: right;
+        }
+
         .input-card {
           background-color: white;
           width: 90%;
