--- a/src/assets/styles/scss/index.scss
+++ b/src/assets/styles/scss/index.scss
@@ -11,6 +11,7 @@
 @use './components/user/favourites';
 @use './components/search/search';
 @use './components/search/categorySearch';
+@use './components/orders/orders';
 
 @use './abstracts/variables';
 @use './abstracts/animations';
