--- a/src/assets/styles/scss/components/orders/_orders.scss
+++ b/src/assets/styles/scss/components/orders/_orders.scss
@@ -1,3 +1,40 @@
 .orders {
-  color: red;
+  width: 60%;
+  margin: 0 auto;
+  font-size: 1.2em;
+
+  &__titles {
+    background-color: rgb(241, 241, 241);
+    padding: .5em;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    border-radius: 5px;
+    font-weight: 500;
+    font-size: 1.3em;
+
+    &--key {
+      width: 100%;
+      padding: 1em 1em;
+    }
+  }
+
+  &__order {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding: .5em;
+    align-items: center;
+
+
+    &--val {
+      padding: 1em 1em;
+    }
+
+    &--product {
+      padding: 1em;
+
+      p {
+        padding: .5em;
+      }
+    }
+  }
 }
