navigation to cart only with products

--- a/src/assets/styles/scss/components/cart/_cartFooter.scss
+++ b/src/assets/styles/scss/components/cart/_cartFooter.scss
@@ -71,6 +71,7 @@
       border-radius: 5px;
       font-size: 1.4em;
       min-width: 100%;
+      cursor: pointer;
       background-color: var.$bianchi-color;
     }
   }
