improve sso login

--- a/src/assets/styles/scss/components/user/_login.scss
+++ b/src/assets/styles/scss/components/user/_login.scss
@@ -168,4 +168,14 @@
     }
 
   }
+
+  &__google {
+    font-size: 1.1em;
+    margin-top: 20px;
+    cursor: pointer;
+
+    &:hover {
+      color: #b67c00;
+    }
+  }
 }
