--- a/src/assets/styles/scss/components/cart/_paymentPage.scss
+++ b/src/assets/styles/scss/components/cart/_paymentPage.scss
@@ -28,7 +28,7 @@
 .payment {
   width: fit-content;
   margin: 80px 300px;
-  background-color: #F7F7F7 !important;
+  background-color: #e9e9e9 !important;
   padding: 2em 3em;
   font-size: 1em;
   border-radius: 5px;
@@ -68,6 +68,12 @@
     &--ref {
       color: gray;
       flex-grow: 1;
+      cursor: pointer;
+      transition: all .4s ease;
+
+      &:hover {
+        color: black;
+      }
 
       @media screen and (max-width: 770px) {
 
@@ -378,6 +384,7 @@
     background-size: 200% 100%;
     background-position: right bottom;
     transition: all .2s ease-out;
+    margin-top: 20px ;
 
     &:hover {
       background-position: left bottom;
