--- a/src/assets/styles/scss/components/cart/_cuponBox.scss
+++ b/src/assets/styles/scss/components/cart/_cuponBox.scss
@@ -1,5 +1,26 @@
 @use '../../abstracts/variables' as var;
 
+
+.main-cupon {
+  position: relative;
+
+  &__delete {
+    position: absolute;
+    top: 2%;
+    right: 2%;
+    opacity: 1;
+    font-size: 2em;
+    transition: all .4s ease;
+    z-index: 2;
+    cursor: pointer;
+    color: rgb(255, 255, 255);
+
+    &:hover {
+      transform: rotate(-180deg);
+    }
+  }
+}
+
 .cupon {
   height: 0;
   transition: all .3s ease-in;
@@ -7,20 +28,19 @@
   background-color: #007e7a;
   margin-bottom: 20px;
   border-radius: 5px;
-
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  width: 100%;
+  text-align: center;
+  position: relative;
 
   &.active {
-    height: 220px;
-
+    height: 180px;
   }
 
-  form {
-    display: flex;
-    flex-flow: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    text-align: center;
+  &.valid {
+    opacity: 0.4;
   }
 
   &__label {
@@ -39,9 +59,10 @@
     padding: .4em 0;
   }
 
-  &__error {
-    color: red;
-    margin-top: 20px;
-    font-size: 1.2em;
+  &__check {
+    position: absolute;
+    top: 40%;
+    opacity: 1;
+    font-size: 4.4em;
   }
 }
