--- a/src/assets/styles/scss/index.scss
+++ b/src/assets/styles/scss/index.scss
@@ -7,6 +7,7 @@
 @use './components/view/mainView';
 @use './components/footer/footer';
 @use './components/loader';
+@use './components/payLoader';
 @use './components/user/login';
 @use './components/user/favourites';
 @use './components/search/search';
