--- a/src/assets/styles/scss/components/category/_product.scss
+++ b/src/assets/styles/scss/components/category/_product.scss
@@ -44,7 +44,8 @@
 
     .offer {
       position: absolute;
-      left: 0;
+      left: 10%;
+      top: 10%;
       border-radius: 5px;
       height: 20px;
       width: fit-content;
