--- a/src/assets/styles/scss/components/header/_link.scss
+++ b/src/assets/styles/scss/components/header/_link.scss
@@ -15,8 +15,10 @@
     color: var.$font-color-header;
     font-weight: var.$weight-header;
     display: flex;
-    letter-spacing: 1.3px;
-    font-size: var.$font-size-header;
+    letter-spacing: .5px;
+    font-size: 20px;
+    margin-top: -2px;
+    padding: 0;
     cursor: pointer;
     width: 100%;
     text-decoration: none;
@@ -27,14 +29,6 @@
     @media screen and (max-width: 770px) {
       color: white;
     }
-  }
-
-  &:hover {
-    border-bottom: 1px solid silver !important;
-    border-image: linear-gradient(to right,
-        transparent 20%,
-        #1a1b1b,
-        transparent 80%) 30 !important;
   }
 
   @media screen and (max-width: 770px) {
