--- a/src/assets/styles/scss/components/header/_navbar.scss
+++ b/src/assets/styles/scss/components/header/_navbar.scss
@@ -64,22 +64,34 @@
     flex-grow: 1;
 
     &--lang {
-      margin-right: 20px;
-      width: 50px;
+      margin-right: 0;
       height: 100%;
       display: flex;
       align-items: center;
       overflow: hidden;
+      transition: .4s all ease;
+
+      .w {
+        max-width: 65px;
+        min-width: 65px;
+      }
 
       img {
-        width: 40px;
-        height: 30px;
+        max-width: 40px;
+        min-width: 40px;
+        height: 40px;
         cursor: pointer;
         transition: all .3s ease;
 
         &:hover {
           transform: scale(1.2);
         }
+
+
+      }
+
+      &.active {
+        transform: translateY(-10px);
       }
     }
 
