--- a/src/assets/styles/global/header/_dropdown.scss
+++ b/src/assets/styles/global/header/_dropdown.scss
@@ -3,6 +3,7 @@
 .dropdown_wrapper {
   position: relative;
   display: inline-block;
+  min-width: 170px;
 
   @media screen and (max-width: 768px) {
     font-size: 0.7em;
@@ -25,7 +26,7 @@
   width: 100%;
   transition: all .4s ease-in-out;  
 
-  @media screen and (max-width: 770px) {
+  @media screen and (max-width: 850px) {
     padding: 0;
     color: white;
 
@@ -85,7 +86,7 @@
       color: white;
     }
 
-    @media screen and (max-width: 770px) {
+    @media screen and (max-width: 850px) {
       width: auto;
       padding: 0;
       padding-left: 0.4rem;
