init filters modal ui

--- a/src/assets/styles/global/index.scss
+++ b/src/assets/styles/global/index.scss
@@ -11,6 +11,7 @@
 @use './search/search';
 @use './search/categorySearch';
 @use './orders/orders';
+@use './filters/filters';
 
 @use './payLoader';
 @use './loader';
