--- a/src/assets/styles/global/category/_category.scss
+++ b/src/assets/styles/global/category/_category.scss
@@ -15,9 +15,18 @@
   }
 
   &__filter {
-    &--price {
-      width: 60%;
-      margin: 0 auto;
+    width: 100%;
+
+    &--title {
+      margin-top: 100px;
+      font-size: 1.8em;
+      cursor: pointer;
+
+      svg {
+        opacity: .7;
+        margin-right: 10px;
+        font-size: .9em;
+      }
     }
   }
 
