--- a/src/assets/styles/global/category/_productBox.scss
+++ b/src/assets/styles/global/category/_productBox.scss
@@ -6,7 +6,7 @@
   .empty-product {
     position: absolute;
     bottom: 0;
-    top: 8rem;
+    top: 25%;
     right: 0;
     left: 0;
     width: 60%;
@@ -25,6 +25,7 @@
       border-radius: 6px;
       padding: 10px 10px;
       border: 3px solid black;
+
     }
   }
 
