--- a/src/assets/styles/themes/_variables.scss
+++ b/src/assets/styles/themes/_variables.scss
@@ -5,6 +5,11 @@ $font-color-header : rgba(36, 36, 36, 0.821);
 $bg-color-footer: #F7F7F7;
 $font-color-footer: #aaaeb3;
 
+$modal-bg-color: rgba(0, 0, 0, 0.705);
+$modal-transition: all .5s ease;
+$modal-bg: rgb(255, 255, 255);
+$modal-bg-mobile: rgb(61, 58, 58);
+
 $bianchi-color : #00B7B1;
 
 $section-padding: 30px;
