--- a/src/assets/styles/global/filters/_filters.scss
+++ b/src/assets/styles/global/filters/_filters.scss
@@ -3,27 +3,60 @@
 .category-filters {
   position: fixed;
   height: 100vh;
+  visibility: hidden;
+  z-index: 3;
   width: 100vw;
-  background-color: transparent;
-  z-index: 0;
+  transition: var.$modal-transition;
 
 
   .filters-menu {
-    width: 30vw;
-    height: 100vh;
-    background-color: blue;
+    width: 100vw;
+    height: 40vh;
+    background-color: var.$modal-bg;
     position: relative;
-    top: 0;
-    left: -100%;
-    z-index: 5;
+    bottom: -100vh;
+    opacity: 1;
+    transition: all .6s ease;
+
+    &__header {
+      padding: 2em 0;
+
+      h1 {
+        text-align: center;
+      }
+    }
+
+    &__content {
+      width: 40%;
+      margin: 0 auto;
+
+      p {
+        font-size: 1.4em;
+      }
+    }
+
 
     &.active {
-      left: 0;
+      bottom: -60vh;
+      z-index: 3;
+    }
+
+    &__close {
+      position: absolute;
+      right: 2%;
+      top: 4%;
+      font-size: 1.8em;
+      cursor: pointer;
+    }
+
+    @media screen and (max-width: 770px) {
+      background-color: var.$modal-bg-mobile;
+      color: white;
     }
   }
 
   &.active {
-    background-color: rgba(22, 22, 22, 0.534);
-    z-index: 4;
+    background-color: var.$modal-bg-color;
+    visibility: visible;
   }
 }
