--- a/src/assets/styles/global/category/_productBox.scss
+++ b/src/assets/styles/global/category/_productBox.scss
@@ -26,6 +26,15 @@
       padding: 10px 10px;
       border: 3px solid black;
 
+      @media screen and (max-width: 650px) {
+        font-size: 1em;
+        padding: 5px 5px;
+      }
+
+      @media screen and (max-width: 400px) {
+        font-size: .9em;
+        padding:2px 2px;
+      }
     }
   }
 
