--- a/src/assets/styles/global/header/_navbar.scss
+++ b/src/assets/styles/global/header/_navbar.scss
@@ -131,7 +131,7 @@
       }
 
       &.active {
-        transform: translateY(-8px);
+        transform: translateY(+8px);
 
         @media screen and (max-width: 870px) {
           transform: none;
@@ -180,7 +180,7 @@
 
           @media screen and (max-width: 480px) {
             width: 100vw !important;
-            height: 50vh;
+            height: 80vh;
             margin: 0;
           }
         }
