--- a/src/assets/styles/global/orders/_orders.scss
+++ b/src/assets/styles/global/orders/_orders.scss
@@ -19,7 +19,7 @@
     padding: .2em;
     display: grid;
     grid-template-columns: 10% 35% 35% 20%;
-     font-weight: 500;
+    font-weight: 500;
     color: white;
     font-size: 1.3em;
 
@@ -54,5 +54,23 @@
 
       p {}
     }
+  }
+
+  @media screen and (max-width: 1450px) {
+    width: 80%;
+  }
+
+  @media screen and (max-width: 900px) {
+    width: 90%;
+    font-size: .9em;
+  }
+  @media screen and (max-width: 520px) {
+    width: 96%;
+    font-size: .8em;
+  }
+
+  @media screen and (max-width: 350px) {
+    width: 98%;
+    font-size: .7em;
   }
 }
