--- a/src/assets/styles/global/index.scss
+++ b/src/assets/styles/global/index.scss
@@ -12,6 +12,7 @@
 @use './search/categorySearch';
 @use './orders/orders';
 @use './filters/filters';
+@use './error404';
 
 @use './payLoader';
 @use './loader';
