--- a/src/assets/styles/global/header/_navbar.scss
+++ b/src/assets/styles/global/header/_navbar.scss
@@ -142,7 +142,7 @@
     &--nav {
       display: flex;
       align-items: center;
-      justify-content: end;
+      justify-content: flex-end;
       width: 100%;
       transition: all .5s ease-in-out;
       margin: 0 30px;
