--- a/src/assets/styles/global/home/_advantage.scss
+++ b/src/assets/styles/global/home/_advantage.scss
@@ -9,7 +9,7 @@
   &__advantage {
     display: flex;
     flex-flow: column wrap;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     color: var.$bianchi-color;
     margin-bottom: 40px;
