--- a/src/assets/styles/global/view/_images.scss
+++ b/src/assets/styles/global/view/_images.scss
@@ -42,7 +42,7 @@
     &--images {
       width: 100%;
       display: flex;
-      justify-content: start;
+      justify-content: flex-start;
       align-items: center;
 
       img {
