--- a/src/assets/styles/global/footer/_footer.scss
+++ b/src/assets/styles/global/footer/_footer.scss
@@ -13,7 +13,7 @@
     &__contact {
       display: flex;
       flex-flow: column wrap;
-      justify-content: start;
+      justify-content: flex-start;
       color: var.$font-color-footer;
       font-weight: 300;
       font-size: 1.2em;
@@ -193,7 +193,7 @@
         width: 100%;
         display: flex;
         font-size: .95em;
-        justify-content: end;
+        justify-content: flex-end;
 
         p {
           margin: 0 20px;
