--- a/src/assets/styles/global/view/_details.scss
+++ b/src/assets/styles/global/view/_details.scss
@@ -10,7 +10,7 @@
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
-    align-items: start;
+    align-items: flex-start;
     font-size: 1.3em;
 
 
