feature: add serious langauages

--- a/src/assets/styles/global/header/_navbar.scss
+++ b/src/assets/styles/global/header/_navbar.scss
@@ -16,8 +16,8 @@
 
   &__container-logo {
     width: 20%;
-    margin: 0 50px;
-    z-index: 3;
+    margin: 10px 50px;
+    z-index: 20;
 
     img {
       transform: scale(1.2);
